--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -118,6 +118,13 @@ h3 {
   margin: 0;
 }
 
+a.anchor {
+  display: block;
+  position: relative;
+  top: -100px;
+  visibility: hidden;
+}
+
 #myprojects {
   text-align: center;
   margin: auto;
